--- a/_posts/2015-08-10-kbus.markdown
+++ b/_posts/2015-08-10-kbus.markdown
@@ -7,9 +7,9 @@ date: 2015-08-10
 img: dreams.png
 thumbnail: dreams-thumbnail.png
 alt: image-alt
-project-date: est. Apr 2015
-client:
+project-date: 4/2015 -
+client: Commuters, Shoppers
 category: Web App - Transportation
-description: KBus is the real-time trip planner for community buses and water taxis.
+description: KBus is the real-time trip planner for community buses, Jeddah transport, and water taxis.
 
 ---
