WIP: add link to post, fix pics

--- a/_posts/2015-08-10-kbus.markdown
+++ b/_posts/2015-08-10-kbus.markdown
@@ -10,6 +10,7 @@ alt: image-alt
 project-date: 4/2015 -
 client: Commuters, Shoppers
 category: Web App - Transportation
+link: http://bit.ly/kbustestdo
 description: KBus is the real-time trip planner for community buses, Jeddah transport, and water taxis.
 
 ---
