--- a/_posts/2015-08-20-hcd.markdown
+++ b/_posts/2015-08-20-hcd.markdown
@@ -2,16 +2,16 @@
 title: IDEO Human-Centered Design Group
 subtitle: HCD study group for community problem solving
 layout: default
-modal-id: 2
-date: 2015-08-20
+modal-id: 4
+date: 2015-08-21
 img: hcd.jpg
 thumbnail: hcd.jpg
 alt: image-alt
 project-date: 8/2015 -
-client: Change Makers
+client: Change makers
 category: Study Group - Design
 link: http://novoed.com/design-kit-q3-2015/?catalog_id=design-kit-q3-2015
-linktag: Signup Here
+linktag: Signup
 description: Design Kit The Course for Human-Centered Design is a seven-week curriculum that will introduce you to the concepts of human-centered design and how this approach can be used to create innovative, effective, and sustainable solutions for social change. This course has been created to reach those who are brand new to human-centered design, so no prior experience required (though we of course welcome previous students to continue honing your human-centered design skills!)
 
 ---
